WIP - checkpoint commit #3 - naive implementation that adds the higher taxa